Fixed alignment of pic div

--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -12,4 +12,5 @@
   .picOrDesc {
       height: 150px;
       width: 150px;
+      margin: 0 auto;
   }
